# cinepair

./: .env.example  .gitignore  LICENSE  README.md  index.html
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  routes.py
backend/app/core/: config.py  logging.py  security.py
backend/app/models/: enums.py  room.py
backend/app/schemas/: chat.py  errors.py  room.py  signaling.py
backend/app/services/: ice_service.py  room_service.py  token_service.py
backend/app/state/: memory_store.py  room_store.py
backend/app/utils/: helpers.py
backend/app/websocket/: presence.py  server.py  signaling.py
backend/tests/: conftest.py  test_approval_flow.py  test_chat.py  test_cleanup.py  test_edge_cases.py  test_join_leave.py  test_room_creation.py  test_settings.py  test_soft_lock.py
client/: electron-builder.config.js  entitlements.mac.plist  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite-env.d.ts  vite.config.ts
client/src/: preload.ts
docs/: DEPLOYMENT.md  api-docs.json  api-reference.md  architecture.md  backend-overview.md  debugging-guide.md  realtime-events.md  rooms-and-signaling.md  settings-system.md  websocket-events.md
server/: package-lock.json  package.json
server/src/: RoomManager.ts  app.ts  config.ts  httpRoutes.ts  index.ts  schemas.test.ts  schemas.ts  types.ts
website/css/: animations.css  components.css  main.css
website/data/: fallback.json
website/js/: api.js  charts.js  config.js  main.js  ui.js
website/pages/: releases.html  (+1 more)
(+55 files in other folders)
